quick updates to README, stlyes, font-family

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,10 @@
   <link rel="apple-touch-icon" sizes="512x512" href="https://joeisacommonname.com/icons/icon-512x512.png?v=c03a1789d168e7065adada8f6a48ff1f8bfe3f41"/>
   <!-- end favicons -->
 
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
+
+
   <title>Campaign Card</title>
 </head>
 <body>
@@ -58,7 +62,7 @@
       <div class="card_front--footer">
         <div class="card_front-donors_total">
           <div>75%</div>
-          <div><span class="numOfDonors--js"></span></div>
+          <div><span class="numOfDonors--js"></span> Donors</div>
         </div>
         <div class="card_front-donors_progress">
           <div class="card_front-donors_progress--background"></div>
